--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npm install --legacy-peer-deps || true"
   },
   "dependencies": {
     "@sanity/client": "^6.29.1",
@@ -15,7 +16,7 @@
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
-    "next-sanity": "^11.6.6",
+    "next-sanity": "^7.1.4",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "sanity": "^4.15.0",
