--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.15.0",
     "framer-motion": "^11.0.0",
+    "geist": "^1.5.1",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "next-sanity": "^7.1.4",
